# babo_exchange

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  TODO.md
client/: CMakeLists.txt  gateway_connection.cpp  gateway_connection.hpp  main.cpp
cmake/: Dependencies.cmake
docs/: bitstamp_api.md  coinbase_api.md
libs/babobook/include/book/: depth_constants.h  depth_level.h  matching_book.h  order_listener.h  trade_listener.h  types.h
libs/babobook/include/data_structures/: narb_tree.h  price_level_descriptor.h
libs/babobook/include/memory/: memory_pool.h
libs/babobook/include/simple/: simple_order.h
libs/babobook/src/: simple_order.cpp
src/: CMakeLists.txt  main.cpp
src/core/: ingress_event.hpp  logging.cpp  logging.hpp  main_process.cpp  main_process.hpp  order_identity.hpp
src/egress/: client_order_event.hpp  client_order_listener.cpp  client_order_listener.hpp  depth_snapshot.hpp  latest_depth_mailbox.cpp  latest_depth_mailbox.hpp
src/feed/: bitstamp.cpp  bitstamp.hpp  bitstamp_ws.cpp  bitstamp_ws.hpp  coinbase.cpp  coinbase.hpp  fixed_point.hpp  order_event.hpp
src/gateway/: socket_poller.cpp  socket_poller.hpp  tcp_gateway.cpp  tcp_gateway.hpp
